# lecture-ai-engineering

.github/workflows/: test.yml
day1/: day1_practice.ipynb
day1/02_streamlit_app/: app.py  config.py
day5/: .gitignore  main.py  pyproject.toml
day5/演習1/models/: titanic_model.pkl
day5/演習3/models/: titanic_model.pkl
day5/演習3/tests/: test_model.py
